Some changes on UI

--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
                         href="https://github.com/Widded">Github</a>. You can stay tuned.</p>
 
                 <div class="more">
-                    <a href="">More</a>
-                    <a href="">References</a>
+                    <a>This page will be updated soon.</a>
                 </div>
             </div>
         </div>
