Some changes on head

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="icon" type="image/x-icon" href="src/img/widded-w-white.svg">
     <meta property="og:title" content="Widded - Our creativity for your success ">
-    <meta property="og:image" content="src/img/widded-w.svg">
+    <meta property="og:image" content="src/img/widded-w-white.svg">
     <meta property="og:image:type" content="image/png">
-    <meta content="I am 16 years old. I'm web developer and designer. I am currently learning javascript."
+    <meta content="I am a 16 year old Frontend developer living in Turkey and trying to improve himself a little more every day. I am studying at high school in Istanbul."
         property="og:description">
 </head>
 
