--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     
     <div class="soon">
         <h1>SOON</h1>
+        <a href="https://rewyy.me/" target="_blank">Check</a>
     </div>
 
 
