--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <meta property="og:image:type" content="image/png">
     <meta content="I am a 16 year old Frontend developer living in Turkey and trying to improve himself a little more every day. I am studying at high school in Istanbul."
         property="og:description">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2772509812104152"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
